--- a/docker-compose/dockerFIle/Dockerfile.PROD
+++ b/docker-compose/dockerFIle/Dockerfile.PROD
@@ -1,4 +1,4 @@
-FROM php:7.2-fpm
+FROM php:7.4-fpm
 
 
 RUN apt-get update && apt-get install -y \
@@ -16,9 +16,15 @@ RUN apt-get update && apt-get install -y \
     git \
     curl
 
-RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl
-RUN docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
-RUN docker-php-ext-install gd bcmath
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+## php:7.2-fpm
+# RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl 
+# RUN docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
+# RUN docker-php-ext-install gd bcmath
+
+RUN docker-php-ext-install pdo pdo_mysql sockets mbstring gd bcmath
+
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
@@ -30,8 +36,8 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 RUN apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
-    && docker-php-source delete \
-    && pecl clear-cache
+    && docker-php-source delete 
+
 
 RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
@@ -49,9 +55,21 @@ WORKDIR /var/www
 
 COPY ./ /var/www
 
+RUN composer install
+
+RUN composer install
+
+
+
 RUN php artisan migrate
 
 RUN php artisan storage:link
+
+RUN php artisan optimize:clear
+RUN php artisan cache:clear
+RUN php artisan config:cache
+RUN php artisan cache:clear
+
 
 EXPOSE 8000
 
