--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
             - db
         networks:
             - my-network-dockerApp
-        command: bash -c "php artisan migrate && php artisan storage:link && php artisan optimize:clear && php artisan cache:clear && php artisan config:cache &&  php artisan cache:clear && php artisan serve --host=0.0.0.0 "
+        command: bash -c "composer install && php artisan && php artisan migrate && php artisan storage:link && php artisan optimize:clear && php artisan cache:clear && php artisan config:cache &&  php artisan cache:clear && php artisan serve --host=0.0.0.0 "
 
     # app-prod:
     #     build:
